fix bug in contacts block(not uneven blocks)

--- a/Sass/_burger.sass
+++ b/Sass/_burger.sass
@@ -4,18 +4,21 @@
     height: 40px
     border: none
     background: none
-    margin-top: 30px
+    position: relative
     z-index: 11
     transition: 1s all
-    transform: translateY(-50%)
+    line-height: 53px
+    margin: 6px 0
+
     &__span
         position: absolute
         width: 30px
         height: 3px
         background-color: white
         transition: .5s all
-        left: 5px
-        top: 17px
+        right: 5px
+        // top: 0
+        // top: 17px
         &:nth-child(1)
             transform: translateY(-10px)
         &:nth-child(3)
