--- a/Sass/_contacts.sass
+++ b/Sass/_contacts.sass
@@ -1,6 +1,7 @@
 .contacts
     &__content
         display: flex
+        justify-content: space-between
     &__title
         font-family: Roboto-Bold
         font-size: 24px
@@ -18,10 +19,13 @@
     &__adress
         margin-bottom: 31px
     &__block
-        padding: 77px 82px 77px 49px
+        padding: 77px 42px 77px 49px
         background-color: $main-color
         font-family: Roboto-Regular
         color: white
+        transform: translateX(-20%)
+        // transform: translateX(-30%)
+        // margin-left: -30%
     .bold
         font-family: Roboto-Bold
     &__button, &__button:visited
@@ -37,8 +41,9 @@
     &__photo
         width: 539px
         height: 374px
-        margin-top: 15px
-        transform: translateX(30%)
+        margin-top: 30px
+        transform: translateX(20%)
+        // margin-right: 10%
         z-index: -1
         // transform: translateX(10%)
     // &__button
