--- a/Sass/_media.sass
+++ b/Sass/_media.sass
@@ -236,8 +236,7 @@
 
     // test
 
-    .services__table-point
-        font-size: 14px
+
     .note__descr
         display: block
         font-size: 15px
@@ -338,6 +337,13 @@
     .modal__icon-svg
         width: 20px
         height: 20px
+    .services__list
+        text-align: left
+        transform: translateX(0%)
+        margin-left: 20px
+    .services__name
+        padding-bottom: 20px
+
 @media (max-width: 485px)
     .title
         font-style: 15px
@@ -352,7 +358,7 @@
         font-size: 17px
     .modal__content
         padding: 39px 31px
-    .modal__input
+    // .modal__input
 
 @media (max-width: 438px)
     .cities__name-text
